SERVER-43904: Filter unelectable nodes during election handoff