src/mongo/db/repl/member_data.h
@@ -151,6 +151,13 @@ public:
         return _hostAndPort;
     }
 
+    /*
+     * Returns true if the last heartbeat data explicilty stated that the node is not electable.
+     */
+    bool isUnelectable() const {
+        return _lastResponse.hasIsElectable() && !_lastResponse.isElectable();
+    }
+
     /**
      * Sets values in this object from the results of a successful heartbeat command.
      * Returns true if the lastApplied/lastDurable values advanced or we've received a newer
