src/mongo/db/repl/repl_set_heartbeat_response.cpp
@@ -63,6 +63,7 @@ const std::string kReplSetFieldName = "set";
 const std::string kSyncSourceFieldName = "syncingTo";
 const std::string kTermFieldName = "term";
 const std::string kTimestampFieldName = "ts";
+const std::string kIsElectableFieldName = "electable";
 
 }  // namespace
 
@@ -101,6 +102,9 @@ void ReplSetHeartbeatResponse::addToBSON(BSONObjBuilder* builder) const {
     if (_appliedOpTimeSet) {
         _appliedOpTime.append(builder, kAppliedOpTimeFieldName);
         builder->appendDate(kAppliedWallTimeFieldName, _appliedWallTime);
+    }
+    if (_electableSet) {
+        *builder << kIsElectableFieldName << _electable;
     }
 }
 
@@ -179,6 +183,13 @@ Status ReplSetHeartbeatResponse::initialize(const BSONObj& doc, long long term) 
     }
     _appliedWallTime = appliedWallTimeElement.Date();
     _appliedOpTimeSet = true;
+
+    status = bsonExtractBooleanField(doc, kIsElectableFieldName, &_electable);
+    if (!status.isOK()) {
+        _electableSet = false;
+    } else {
+        _electableSet = true;
+    }
 
     const BSONElement memberStateElement = doc[kMemberStateFieldName];
     if (memberStateElement.eoo()) {
@@ -298,6 +309,11 @@ OpTime ReplSetHeartbeatResponse::getDurableOpTime() const {
 OpTimeAndWallTime ReplSetHeartbeatResponse::getDurableOpTimeAndWallTime() const {
     invariant(_durableOpTimeSet);
     return {_durableOpTime, _durableWallTime};
+}
+
+bool ReplSetHeartbeatResponse::isElectable() const {
+    invariant(_electableSet);
+    return _electable;
 }
 
 }  // namespace repl
